--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 .navbar{
-  background-color: #D3D3D3;
+  background-color: rgba(211, 211, 211,0.2);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  
   
 }
 
@@ -62,16 +63,17 @@
 
 .firstDisplay section{
   justify-items: center;
-  padding-top: 50px;
+  padding-top: 70px;
 }
 
 .firstDisplay section h1 {
   margin: 10px;
-  font-size: 4.5rem;
+  font-size: 64px;
 }
 
 .firstDisplay section h2 {
   font-size: 40px;
+  padding-top: 90px;
 }
 
 .firstDisplay section h4 {
@@ -81,7 +83,7 @@
 
 
 .firstDisplay section p{
-  margin-top: 5px;
+  margin-top: 35px;
   margin-bottom: 40px;
       font-size: 30px;
 }
@@ -303,6 +305,7 @@ h4{
 
 .story{
   justify-items: center;
+  padding: 100px;
       
 }
 
@@ -352,4 +355,46 @@ h4{
   width: 99%;
   cursor: pointer;
   padding-top: 20px;
+}
+
+
+.details{
+  border: 1px solid white;
+  padding: 10px 50px 10px 20px;
+  display: flex;
+}
+
+.details span{
+  padding: 7px;
+}
+
+.worth{
+  border: 1px solid white;
+  padding: 10px 50px 10px 20px;
+  
+}
+
+.worth h2{
+  margin: 0;
+}
+
+.worth p{
+  margin: 2px;
+}
+
+.verify{
+  border: 1px solid white;
+  padding: 25px 50px 10px 20px;
+  background-color: #4DA2FF;
+  cursor: pointer;
+  
+}
+
+.verify:hover{
+  background-color: #1266be;
+  
+}
+
+.dash{
+  display: flex;
 }
